--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Ejercicio17",
+            "request": "launch",
+            "mainClass": "Tema5.Ejercicio17",
+            "projectName": "Tema2Programacion_ded7dbe0"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
